# waver_cv_ros2

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.Prod  GSCAM2_SETUP.md  README.md  config_docker.sh  dds_config.xml  docker-compose.yml  package.xml  setup.cfg  setup.py
ROS2_Docker_rpi_camera/: autostart.sh  config_docker.sh
ROS2_Docker_rpi_camera/ros2_ws/src/: README.txt
ROS2_Docker_rpi_camera/scripts/: run.sh
docs/: GSTREAMER_STREAMING.md  MEDIAPIPE_INTEGRATED.md  MEDIAPIPE_SETUP.md  QUICK_START_STREAMING.md
gst_custom_plugin/: Makefile  README.md  gstmyfilter.cpp
ros2_ws/gst_mediapipe_plugin/: CMakeLists.txt  gst_mediapipe_face.py  gst_opencv_face.cpp
ros2_ws/gst_opencv_optflow/: CMakeLists.txt  PLUGIN_CREATION.md  gst_opencv_optflow.cpp
ros2_ws/src/ros_cv_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros_cv_bringup/launch/: main.launch.py
ros2_ws/src/waver_cv_bringup/: GSTREAMER_GUIDE.md  MEDIAPIPE_QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/waver_cv_bringup/config/: rpi_camera_params.yaml
ros2_ws/src/waver_cv_bringup/launch/: gscam_examples.py  main.launch.py  main_gscam.launch.py  main_gscam_hd.launch.py  main_gscam_stream.launch.py  main_gscam_stream_hd.launch.py  mediapipe_face.launch.py  mediapipe_hands.launch.py  optical_flow.launch.py  sparse_optical_flow.launch.py
scripts/: bash.sh  build.sh  check_topics.sh  compose.sh  publish  publish.sh  run.sh  shell.sh  test_camera.sh  test_gstreamer.sh
waver_cv/: simple_sub_pub.py  subscriber.py
(+4 files in other folders)
